# realtime-chat-room-api

./: .coverage  .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1f0054ed0799_initial_schema.py  74a8b9f0f4c1_add_message_media_fields.py
app/: auth.py  connection_manager.py  database.py  main.py  models.py  pubsub.py  schema.py
app/routers/: chat.py  rooms.py  users.py
app/static/: index.html
tests/: test_chat.py
